# axum-benchmark-database

./: .env  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
http/: conditions.http  conditions_diesel.http  main.http  main.makefile
src/: lib.rs  main.rs  model.rs  schema.rs  state.rs
src/config/: database.rs  environment.rs
src/dto/: app_error.rs  app_response.rs  mod.rs
src/modules/: mod.rs
src/modules/conditions/: controller.rs  controller_benchmark.rs  controller_crud.rs  repository.rs  schema.rs
src/modules/conditions_diesel/: controller_benchmark.rs  controller_crud.rs  mod.rs  repository.rs  schema.rs
src/modules/conditions_kafka/: controller.rs  controller_benchmark.rs  mod.rs  repository.rs  schema.rs
src/modules/conditions_tiberius/: README.md  controller_benchmark.rs  controller_crud.rs  mod.rs  repository.rs  schema.rs
src/modules/conditions_tiberius_columns/: controller_benchmark.rs  controller_crud.rs  mod.rs  repository.rs  schema.rs
src/util/: generator.rs  mod.rs  serializer.rs
