[package]
name = "axum-benchmark-database"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.5", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
] }
diesel = { version = "2.3.2", features = ["postgres", "chrono", "r2d2"] }
tokio = { version = "1.47.1", features = ["full"] }

chrono = { version = "0.4.41", features = ["serde"] }
serde={version = "1.0.219", features = ["derive"]}

validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.145"
envy = "0.4.2"
lazy_static = "1.5.0"
dotenv = "0.15.0"
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
