[package]
name = "axum-benchmark-database"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.5", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
] }
diesel = { version = "2.3.2", features = ["postgres", "chrono", "r2d2"] }
tokio = { version = "1.47.1", features = ["full", "fs"] }

chrono = { version = "0.4.41", features = ["serde"] }
serde={version = "1.0.219", features = ["derive"]}

validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.145"
envy = "0.4.2"
lazy_static = "1.5.0"
dotenv = "0.15.0"
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
csv = "1.3.1"
bytes = "1.10.1"
futures-util = "0.3.31"
tempfile = "3.23.0"
rayon = "1.11.0"

rdkafka = { version = "0.38", features = ["tokio"] }
tiberius = {version = "0.12.2", features = ["chrono", "rust_decimal", "time"]}
tokio-util = {version = "0.7.17", features = ["compat"]}
deadpool-tiberius = "0.1.9"
rust_decimal = {version = "1.39.0", features = ["std", "serde"]}
